--- a/modules/extensions/package.json
+++ b/modules/extensions/package.json
@@ -2,19 +2,28 @@
   "name": "@replit/extensions",
   "version": "1.1.0",
   "description": "The Replit Extensions client is a module that allows you to easily interact with the Workspace.",
+  "types": "./src/index.ts",
   "exports": {
     "./package.json": "./package.json",
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": {
-        "default": "./dist/index.js"
-      },
-      "default": "./dist/index.cjs",
-      "require": "./dist/index.js"
+        "types": "./src/index.ts",
+        "import": {
+          "default": "./src/index.ts"
+        }
     }
   },
-  "types": "./src/index.ts",
   "publishConfig": {
+    "exports": {
+      "./package.json": "./package.json",
+      ".": {
+        "types": "./dist/index.d.ts",
+        "import": {
+          "default": "./dist/index.js"
+        },
+        "default": "./dist/index.cjs",
+        "require": "./dist/index.js"
+      }
+    },
     "types": "./dist/index.d.ts"
   },
   "type": "module",
