--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pnpm": ">=6"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.1",
     "@replit/extensions": "workspace:*",
     "@types/react": "^18.0.28",
     "@vitejs/plugin-react": "^4.0.0",
