--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "replit-extensions-client",
+  "version": "0",
   "description": "Replit Extensions Monorepo (All Clients)",
   "scripts": {
     "dev": "cd modules/example && pnpm dev",
