--- a/modules/example/package.json
+++ b/modules/example/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.2.4",
     "@vitejs/plugin-react": "^4.0.0",
+    "jose": "^4.14.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite": "^4.2.1"
