--- a/modules/extensions/package.json
+++ b/modules/extensions/package.json
@@ -6,10 +6,10 @@
   "exports": {
     "./package.json": "./package.json",
     ".": {
-        "types": "./src/index.ts",
-        "import": {
-          "default": "./src/index.ts"
-        }
+      "types": "./src/index.ts",
+      "import": {
+        "default": "./src/index.ts"
+      }
     }
   },
   "publishConfig": {
@@ -48,7 +48,8 @@
   "license": "MIT",
   "dependencies": {
     "@codemirror/state": "^6.2.0",
-    "comlink": "^4.3.1"
+    "comlink": "^4.3.1",
+    "jose": "^4.14.4"
   },
   "devDependencies": {
     "esbuild": "^0.15.18",
