--- a/modules/extensions/package.json
+++ b/modules/extensions/package.json
@@ -30,6 +30,7 @@
   "unpkg": "dist/index.global.js",
   "scripts": {
     "build": "tsup src/index.ts  --sourcemap --dts --platform browser --format esm,cjs,iife --global-name replit",
+    "test:build": "jest buildTests",
     "lint": "npx prettier --write src/*",
     "lint:check": "npx prettier -l src/*",
     "type:check": "tsc --noEmit",
@@ -52,8 +53,15 @@
     "jose": "^4.14.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@types/jest": "^29.5.1",
     "esbuild": "^0.15.18",
+    "esbuild-jest": "^0.5.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tsup": "^6.6.3",
     "typedoc": "^0.23.21",
     "typescript": "^4.9.3"
