added test:build command

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: 18
       - uses: pnpm/action-setup@v2
-        with: 
+        with:
           version: 7.29.1
       - run: pnpm install
       - run: pnpm type:check
@@ -29,7 +29,19 @@ jobs:
         with:
           node-version: 18
       - uses: pnpm/action-setup@v2
-        with: 
+        with:
           version: 7.29.1
       - run: pnpm install
       - run: pnpm lint:check
+  test-build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 18
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7.29.1
+      - run: pnpm install
+      - run: pnpm test:build
