--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "replit-extensions-client",
   "description": "Replit Extensions Monorepo (All Clients)",
   "scripts": {
-    "dev": "cd modules/react-example && pnpm dev",
-    "lint": "turbo run lint",
-    "lint:check": "turbo run lint:check",
+    "dev": "cd modules/dev && pnpm dev",
+    "lint": "npx prettier --write modules/*",
+    "lint:check": "npx prettier -l modules/*",
     "type:check": "turbo run type:check",
     "test:build": "turbo run test:build",
     "build": "turbo run build",
