--- a/package.json
+++ b/package.json
@@ -49,5 +49,10 @@
     "typedoc": "^0.23.21",
     "typescript": "^4.9.3",
     "vite": "^4.2.1"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "jose@4.14.4": "patches/jose@4.14.4.patch"
+    }
   }
 }
