--- a/modules/extensions/package.json
+++ b/modules/extensions/package.json
@@ -49,6 +49,7 @@
   "license": "MIT",
   "dependencies": {
     "@codemirror/state": "^6.2.0",
+    "@yoursunny/webcrypto-ed25519": "^0.0.20221020",
     "comlink": "^4.3.1",
     "jose": "^4.14.4"
   },
