--- a/modules/extensions/package.json
+++ b/modules/extensions/package.json
@@ -49,11 +49,15 @@
   "license": "MIT",
   "dependencies": {
     "@codemirror/state": "^6.2.0",
+    "@noble/curves": "^1.0.0",
+    "@root/asn1": "^1.0.0",
     "@yoursunny/webcrypto-ed25519": "^0.0.20221020",
+    "b64u-lite": "^1.1.0",
     "comlink": "^4.3.1",
     "jose": "^4.14.4"
   },
   "devDependencies": {
+    "@types/root__asn1": "^1.0.2",
     "esbuild": "^0.15.18",
     "prettier": "^2.7.1",
     "tsup": "^6.6.3",
