--- a/modules/extensions/package.json
+++ b/modules/extensions/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "@codemirror/state": "^6.2.0",
     "@noble/curves": "^1.0.0",
+		"@replit/node-fetch": "^3.1.0",
     "@root/asn1": "^1.0.0",
     "b64u-lite": "^1.1.0",
     "comlink": "^4.3.1",
