--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "replit-extensions-client",
+  "name": "@replit/extensions",
   "description": "Replit Extensions Monorepo (All Clients)",
   "scripts": {
     "dev": "cd modules/dev && pnpm dev",
+    "dev:docs": "cd modules/docs && pnpm dev",
     "lint": "turbo run lint",
     "lint:check": "turbo run lint:check",
     "type:check": "turbo run type:check",
