--- a/modules/docs/package.json
+++ b/modules/docs/package.json
@@ -3,10 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
-    "lint": "npx prettier --write src/*",
-    "lint:check": "npx prettier -l src/*",
-    "type:check": "tsc --noEmit",
+    "dev": "next dev -H 0.0.0.0 -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -17,10 +14,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20.2.3",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.2.4",
-    "typescript": "^4.9.3",
-    "prettier": "^2.7.1"
+    "eslint": "8.43.0",
+    "eslint-config-next": "13.4.7"
   }
 }
