--- a/modules/docs/package.json
+++ b/modules/docs/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "ts-node build.ts && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -12,9 +12,17 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.4.7",
+    "@replit/extensions": "workspace:*",
+    "@replit/extensions-react": "workspace:*",
+    "@types/mdx": "^2.0.5",
+    "autoprefixer": "^10.4.14",
     "next": "12.2.0",
+    "postcss": "^8.4.24",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.3.2",
+    "ts-node": "^10.9.1",
+    "webpack": "^5.88.0"
   },
   "devDependencies": {
     "@types/node": "18.0.1",
