--- a/modules/docs/package.json
+++ b/modules/docs/package.json
@@ -2,20 +2,23 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "ts-node build.ts && next build",
+    "build": "pnpm index && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "index": "npx ts-node-esm index.ts"
   },
   "dependencies": {
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.4.7",
-    "@replit/extensions": "workspace:*",
-    "@replit/extensions-react": "workspace:*",
+    "@replit/extensions": "workspace:1.7.2",
+    "@replit/extensions-react": "workspace:0.3.0-beta",
     "@types/mdx": "^2.0.5",
     "autoprefixer": "^10.4.14",
+    "glob": "^10.3.0",
     "next": "12.2.0",
     "postcss": "^8.4.24",
     "react": "18.2.0",
