--- a/modules/extensions/package.json
+++ b/modules/extensions/package.json
@@ -56,6 +56,7 @@
     "jose": "^4.14.4"
   },
   "devDependencies": {
+    "@types/glob": "^8.1.0",
     "@types/root__asn1": "^1.0.2",
     "esbuild": "^0.15.18",
     "prettier": "^2.7.1",
