--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "replit-extensions-client",
   "description": "Replit Extensions Monorepo (All Clients)",
   "scripts": {
-    "dev:docs": "cd modules/docs && pnpm dev",
+    "dev:docs": "cd docs && pnpm dev",
     "dev": "cd modules/dev && pnpm dev",
     "lint": "turbo run lint",
     "lint:check": "turbo run lint:check",
