--- a/modules/extensions/package.json
+++ b/modules/extensions/package.json
@@ -52,8 +52,7 @@
     "@noble/curves": "^1.0.0",
     "@root/asn1": "^1.0.0",
     "b64u-lite": "^1.1.0",
-    "comlink": "^4.3.1",
-    "jose": "^4.14.4"
+    "comlink": "^4.3.1"
   },
   "devDependencies": {
     "@types/root__asn1": "^1.0.2",
