--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
-{
+x{
   "name": "replit-extensions-client",
   "description": "Replit Extensions Monorepo (All Clients)",
   "scripts": {
-    "dev": "cd modules/dev && pnpm dev",
+    "tester": "cd modules/tester && pnpm tester",
     "lint": "turbo run lint",
     "lint:check": "turbo run lint:check",
     "type:check": "turbo run type:check",
