--- a/modules/extensions-react/package.json
+++ b/modules/extensions-react/package.json
@@ -48,16 +48,17 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@types/react": "^18.2.0"
+    "@types/react": "^18.2.0",
+    "jotai": "^2.4.2"
   },
   "devDependencies": {
+    "@replit/extensions": "workspace:*",
     "esbuild": "^0.15.18",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tsup": "^6.6.3",
-    "typescript": "^4.9.3",
-    "@replit/extensions": "workspace:*"
+    "typescript": "^4.9.3"
   },
   "peerDependencies": {
     "@replit/extensions": ">=1.x",
